src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__while_inside_loop.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
do {
//
loop {
  let i = 0
  while i < 3 {
    i = i + 1
  }
  break
}
}

OK
.fn @main
  params 0
  stack 4
  .locals
    i = r1
  .code
   0  lsmi r1, 0
   1  lsmi r3, 3
   2  islt r1, r3
   3  jmp 3   ; to 6
   4  add r1, r1, 1
   5  jmp -4   ; to 1
   6  jmp 2   ; to 8
   7  jmp -7   ; to 0
   8  lnil r0
   9  ret
