src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__while_nested.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
do {
//
while true {
  let i = 0
  while i < 5 {
    let j = 1
    i = i + 1
  }
  break
}
}

OK
.fn @main
  params 0
  stack 4
  .locals
    i = r1
    j = r2
  .code
   0  ltrue r1
   1  istrue r1
   2  jmp 10   ; to 12
   3  lsmi r1, 0
   4  lsmi r3, 5
   5  islt r1, r3
   6  jmp 4   ; to 10
   7  lsmi r2, 1
   8  add r1, r1, 1
   9  jmp -5   ; to 4
  10  jmp 2   ; to 12
  11  jmp -11   ; to 0
  12  lnil r0
  13  ret
